--- a/style.css
+++ b/style.css
@@ -10,3 +10,17 @@
 section{
     padding-top: 5rem;
 }
+
+.btn-mail {
+    margin: 0 auto;
+    border: 2px solid #0d6efd;
+    width: fit-content;
+    padding: 8px 12px;
+    border-radius: 8px 14px;
+}
+
+.resume {
+    border: 2px solid #FAFAFA;
+    width: fit-content;
+    border-radius: 8px;
+}
