refreshing and add some insight

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 
 img {
   width: 100%;
-  height: auto;
+  height: 300px;
 }
 
 /* UTILITY CLASSES */
@@ -107,6 +107,59 @@ img {
   font-weight: 100;
 }
 
+/* SKILLS SECTION */
+
+#skills {
+  text-align: center;
+  width: 100%;
+  padding: 7rem 0.1rem;
+  background-color: var(--secondary-color);
+}
+
+#skills .container {
+  display: flex;
+}
+
+#skills .container .left {
+  width: 50%;
+}
+
+#skills .container .left p {
+  text-align: left;
+  color: #eee;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  line-height: 32px;   /* within paragraph */
+  margin-bottom: 30px; 
+}
+
+#skills .container .right {
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  flex-wrap: wrap;
+}
+
+.box {
+  padding: 10px;
+  background-color: #eee;
+  margin: 1rem;
+  border-radius: 10px;
+  color: #333;
+}
+
+#skills .container .box p {
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
+.description {
+  font-size: 1.3rem;
+  color: #333;
+}
+
 #caption {
   color: rgb(240, 248, 255);
 }
@@ -115,7 +168,7 @@ img {
   text-align: center;
   width: 100%;
   padding: 7rem 0.1rem;
-  background-color: var(--secondary-color);
+  background-color: #444;
 }
 
 #projects .projects {
@@ -178,7 +231,7 @@ img {
 /* CONTACT SECTION */
 #contact {
   height: 80vh;
-  background-color: #444;
+  background-color: var(--secondary-color);
   color: #fff;
 }
 
@@ -244,10 +297,22 @@ img {
 }
 
 /* SMARTPHONE */
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   #navbar {
     padding: 0rem 1rem;
     justify-content: center;
+  }
+
+  #skills .container {
+    display: block;
+  }
+
+  #skills .container .left {
+    width: 100%;
+  }
+
+  #skills .container .right {
+    width: 100%;
   }
 
   #projects .projects {
