fix navbar mobile

--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,8 @@ img {
 @media (max-width: 800px) {
   #navbar {
     padding: 0rem 1rem;
-    justify-content: center;
+    justify-content: space-around;
+    overflow-x: scroll;
   }
 
   #skills .container {
