--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ img {
 @media (max-width: 800px) {
   #navbar {
     padding: 0rem 1rem;
-    justify-content: space-around;
+    justify-content: flex-start;
     overflow-x: scroll;
   }
 
