--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ img {
 }
 
 .lead {
+  text-align: justify;
   font-size: 1.5rem;
   color: #eee;
   font-weight: 100;
@@ -129,7 +130,7 @@ img {
 }
 
 #skills .container .left p {
-  text-align: left;
+  text-align: justify;
   color: #eee;
   font-size: 1.3rem;
   font-weight: bolder;
@@ -160,6 +161,7 @@ img {
 }
 
 .description {
+  text-align: justify;
   font-size: 1.3rem;
   color: #333;
 }
