--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ img {
   font-size: 3.5rem;
   font-weight: bolder;
   line-height: 1.2;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
 }
 
 .lead {
